k/dex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-dex-websecure
  namespace: dex
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
